"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2010-04-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-83:
	  hacprism: implemented channel-get, very informative!
		Added bunch of test cases, documented.


2010-04-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-82+:
	  Added hacprsim: 'mode fatal' to abort on any interference
		or instability diagnostic with non-zero exit status.
		Test cases added, documentation updated.
	  Added more LEDR channel prsim tests.


2010-04-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-82:
	  Patched up sources to compile under g++-3.3 again.
	  Added new libs to util/.


2010-04-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-81:
	  hacprsim: added level-encoded dual-rail (LEDR) channel support.
		'channel-ledr' name ack:init bundle:# data:init repeat:init
	  Documented (texinfo), added handful of basic test cases.  


2010-04-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-80:
	  For i686-darwin10-gcc-4.2, need to explicitly instantiate
		a few template member functions of footprint::.
	  AST/instance.cc: improved diagnostic message for
		bad port connections with instance name and declared type.
		Test cases (expect-fails) updated.


2010-04-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-79:
	  hacprsim: implemented per-channel timing min bound, 
		similar to global min/max timing policy.
	  Updated test cases and documentation.


2010-04-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-78:
	  hacprsim: fixed handling of bad values (set/assert).
		Added test cases.


2010-04-09	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-77: