@@ -1,0 +1,58 @@
+channels:
+L : .e(init:0)  1x1of2 off
+R : .e(init:0)  1x1of2 off
+L : .e(init:0)  1x1of2 source, timing: global {0,1,1,0,1,1,0,1,1,} @0
+	count: 0, unknowns: 2
+R : .e(init:0)  1x1of2 sink,expect, timing: global {0,1,1,0,1,1,} @0
+	count: 0, unknowns: 2
+L : .e(init:0)  1x1of2 source,watch,stopped, timing: global {0,1,1,0,1,1,0,1,1,} @0
+	count: 0, unknowns: 2
+R : .e(init:0)  1x1of2 sink,expect,watch,stopped, timing: global {0,1,1,0,1,1,} @0
+	count: 0, unknowns: 2
+L : .e(init:0)  1x1of2 source,watch,stopped, timing: global {0,1,1,0,1,1,0,1,1,} @0
+	count: 0, unknowns: 0
+R : .e(init:0)  1x1of2 sink,expect,watch,stopped, timing: global {0,1,1,0,1,1,} @0
+	count: 0, unknowns: 0
+event queue:
+	50	L.d[0] : 1
+	50	R.e : 1
+channel	L (.data) : 0 @ 50
+channel	R (.data) : 0 @ 70
+channel	L (.data) : 1 @ 130
+channel	R (.data) : 1 @ 150
+channel	L (.data) : 1 @ 210
+channel	R (.data) : 1 @ 230
+channel	L (.data) : 0 @ 290
+channel	R (.data) : 0 @ 310
+channel	L (.data) : 1 @ 370
+channel	R (.data) : 1 @ 390
+channel	L (.data) : 1 @ 450
+channel	R (.data) : 1 @ 470
+channel	L (.data) : 0 @ 530
+channel	R (.data) : 0 @ 550
+channel	L (.data) : 1 @ 610
+channel	R (.data) : 1 @ 630
+channel	L (.data) : 1 @ 690
+channel	R (.data) : 1 @ 710
+L : .e(init:0)  1x1of2 watch
+	count: 0, unknowns: 0
+R : .e(init:0)  1x1of2 sink,watch, timing: global
+	count: 0, unknowns: 0
+Ports subnodes of 'R':
+R.d[0] : 0
+R.d[1] : 0
+R.e : 1
+R.d[0]:0
+. ~_r[0]:1
+. ~.-+
+. ~. & L.d[0]:0, input
+L.e:1
+.-+
+. | R.d[0]:0
+. | . ~_r[0]:1
+. | . ~.-+
+. | . ~. & L.d[0]:0, input
+. | R.d[1]:0
+. | . ~_r[1]:1
+. | . ~.-+
+. | . ~. & L.d[1]:0, input
