@@ -1,4 +1,5 @@
-# "eledr-buffer-a-03.prsimrc"
+# "eledr-buffer-a-06.prsimrc"
+# copy-modified from "eledr-buffer-a-03.prsimrc"
 # @haco@ eledr-buffer-a.haco-c
 
 channel-ledr L e:0 :0 d:0 r:0
