@@ -1,4 +1,5 @@
-# "eledr-buffer-b-03.prsimrc"
+# "eledr-buffer-b-06.prsimrc"
+# copy-modified from "eledr-buffer-b-03.prsimrc"
 # @haco@ eledr-buffer-b.haco-c
 
 channel-ledr L e:0 :0 d:0 r:0
