@@ -1,0 +1,49 @@
+configuring environment... 
+with random delays 
+default after min: 0
+default after max: +INF
+resetting... 
+WARNING: weak-interference `buf1.d_rail._r'
+>> cause: `_Reset' (val: 0)
+WARNING: weak-interference `buf1.p_rail._r'
+>> cause: `_Reset' (val: 0)
+WARNING: weak-interference `buf2.d_rail._r'
+>> cause: `_Reset' (val: 0)
+WARNING: weak-interference `buf2.p_rail._r'
+>> cause: `_Reset' (val: 0)
+X nodes:
+
+releasing from reset... 
+channel	L (.data) : 1
+channel	R (.data) : 1
+channel R has value 1, as expected.
+channel	L (.data) : 0
+channel	R (.data) : 0
+channel R has value 0, as expected.
+channel	L (.data) : 0
+channel	R (.data) : 0
+channel R has value 0, as expected.
+channel	L (.data) : 0
+channel	R (.data) : 0
+channel R has value 0, as expected.
+channel	L (.data) : 0
+channel	R (.data) : 0
+channel R has value 0, as expected.
+channel	L (.data) : 1
+channel	R (.data) : 1
+channel R has value 1, as expected.
+channel	L (.data) : 0
+channel	L (.data) : 1
+channel	R (.data) : 0
+channel R has value 0, as expected.
+channel	L (.data) : 1
+channel	R (.data) : 1
+channel	L (.data) : 1
+channels:
+L : LEDR (init .e:0 .d:0 .r:0) source,watch, timing: global {1,0,0,0,0,1,0,1,1,1,1,} @10
+M : LEDR (init .e:0 .d:0 .r:0) off
+R : LEDR (init .e:0 .d:0 .r:0) sink,stop-on-empty,watch,stopped, timing: global
+channel L: channel is full (1), waiting for receiver ack
+channel M: channel is full (1), waiting for receiver ack
+channel R: channel is full (1), waiting for receiver ack
+channel L has more values, as expected.
